mejora grafico de error, centraliza habilitacion de consola durante el proceso